--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
 body {
-  background-color: rgb(11, 255, 206);
+  background-color: rgba(235, 246, 244, 0.967);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
